--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
 		"mongodb": "^4.4.1",
 		"nodemon": "^2.0.15",
-		"validator": "^13.7.0"
+		"validator": "^13.7.0",
+		"ws": "^8.5.0"
 	},
 	"scripts": {
 		"dev": "nodemon index.js"
